# ubasic-picocalc

./: CMakeLists.txt  LICENSE  README.md  main.c
drivers/: onboard_led.c
uf2/: README.MD  ubasic_picocalc_pico.uf2  ubasic_picocalc_pico2.uf2
